; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/misc/extr_pmic8xxx-pwrkey.c_pm8921_pwrkey_shutdown.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/misc/extr_pmic8xxx-pwrkey.c_pm8921_pwrkey_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmic8xxx_pwrkey = type { %struct.regmap* }
%struct.regmap = type { i32 }

@SLEEP_CTRL_SMPL_EN_RESET = common dso_local global i32 0, align 4
@PM8921_SLEEP_CTRL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pmic8xxx_pwrkey*, i32)* @pm8921_pwrkey_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pm8921_pwrkey_shutdown(%struct.pmic8xxx_pwrkey* %0, i32 %1) #0 {
  %3 = alloca %struct.pmic8xxx_pwrkey*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.regmap*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.pmic8xxx_pwrkey* %0, %struct.pmic8xxx_pwrkey** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.pmic8xxx_pwrkey*, %struct.pmic8xxx_pwrkey** %3, align 8
  %9 = getelementptr inbounds %struct.pmic8xxx_pwrkey, %struct.pmic8xxx_pwrkey* %8, i32 0, i32 0
  %10 = load %struct.regmap*, %struct.regmap** %9, align 8
  store %struct.regmap* %10, %struct.regmap** %5, align 8
  %11 = load i32, i32* @SLEEP_CTRL_SMPL_EN_RESET, align 4
  store i32 %11, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* %6, align 4
  store i32 %15, i32* %7, align 4
  br label %16

16:                                               ; preds = %14, %2
  %17 = load %struct.regmap*, %struct.regmap** %5, align 8
  %18 = load i32, i32* @PM8921_SLEEP_CTRL, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @regmap_update_bits(%struct.regmap* %17, i32 %18, i32 %19, i32 %20)
  ret i32 %21
}

declare dso_local i32 @regmap_update_bits(%struct.regmap*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
